@@ -164,6 +164,18 @@
   </select>
 </form>
 
+<!-- test converting units to px -->
+<div id="unit_px_test">
+  <div id="unit_px_test_1">
+    <div id="unit_px_test_1_1"></div>
+  </div>
+  <div id="unit_px_test_2">
+    <div id="unit_px_test_2_1">
+       <div id="unit_px_test_2_1_1"></div>
+    </div>
+  </div>
+</div>
+
 <!-- writeAttributes  -->
 <p id="write_attribute_para"></p>
 <a id="write_attribute_link" href="test.html"></a>
